--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -13,7 +14,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane alignment="CENTER" hgap="4.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="676.0" prefWidth="326.0" vgap="4.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
+    <stylesheets>
+        <URL value="@upis.css" />
+    </stylesheets>
+    <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
@@ -21,6 +25,7 @@
     <RowConstraints maxHeight="399.0" minHeight="10.0" prefHeight="136.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="418.0" minHeight="10.0" prefHeight="134.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="435.0" minHeight="10.0" prefHeight="239.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="435.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane hgap="5.0" vgap="5.0" GridPane.rowIndex="1">
@@ -40,7 +45,7 @@
             <Label text="Datum rođenja:" GridPane.rowIndex="2" />
             <Label text="Mjesto rođenja:" GridPane.rowIndex="3" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox editable="true" prefHeight="25.0" prefWidth="277.0" promptText="Sarajevo" visibleRowCount="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="izborMjestaRodjenja" editable="true" prefHeight="25.0" prefWidth="277.0" promptText="Sarajevo" visibleRowCount="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <DatePicker prefHeight="25.0" prefWidth="181.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
          <padding>
@@ -116,7 +121,6 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Odsjek:" GridPane.rowIndex="1" />
@@ -129,7 +133,6 @@
             <ChoiceBox prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <CheckBox mnemonicParsing="false" prefHeight="17.0" prefWidth="226.0" text="Pripadnost boračkim kategorijama" GridPane.columnSpan="2" GridPane.rowIndex="5" />
             <ChoiceBox prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="295.0" text="Potvrdi" GridPane.columnSpan="2" GridPane.rowIndex="6" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -138,6 +141,7 @@
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </GridPane.margin>
       </GridPane>
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="305.0" text="Potvrdi" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
