Podržana validacija za unos imena, prezimena i broja indeksa

--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.css
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.css
@@ -3,3 +3,12 @@ GridPane {
     -fx-border-width: 2;
     -fx-border-radius: 2px;
 }
+
+.poljeIspravno {
+    -fx-control-inner-background: greenyellow;
+}
+
+.poljeNijeIspravno {
+    -fx-control-inner-background: lightpink;
+}
+
