--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
@@ -132,7 +132,7 @@
             <ChoiceBox fx:id="izborOdsjeka" prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="izborCiklusa" prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <CheckBox mnemonicParsing="false" prefHeight="17.0" prefWidth="226.0" text="Pripadnost boračkim kategorijama" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-            <ChoiceBox prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ChoiceBox fx:id="izborStatusa" prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
