Podržan unos email adrese

--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
@@ -99,8 +99,8 @@
             <Label prefHeight="17.0" prefWidth="137.0" text="Kontakt telefon:" GridPane.rowIndex="2" />
             <Label text="E-mail adresa:" GridPane.rowIndex="3" />
             <TextField fx:id="kontaktAdresa" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefWidth="559.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="kontaktTelefon" prefWidth="559.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
