--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
@@ -131,7 +131,7 @@
             <ChoiceBox fx:id="izborGodineStudija" prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <ChoiceBox fx:id="izborOdsjeka" prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="izborCiklusa" prefHeight="25.0" prefWidth="196.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <CheckBox mnemonicParsing="false" prefHeight="17.0" prefWidth="226.0" text="Pripadnost boračkim kategorijama" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+            <CheckBox fx:id="boracka" mnemonicParsing="false" prefHeight="17.0" prefWidth="226.0" text="Pripadnost boračkim kategorijama" GridPane.columnSpan="2" GridPane.rowIndex="5" />
             <ChoiceBox fx:id="izborStatusa" prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
          <padding>
@@ -141,7 +141,7 @@
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </GridPane.margin>
       </GridPane>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="305.0" text="Potvrdi" GridPane.rowIndex="4" />
+      <Button fx:id="potvrda" onAction="#potvrdi" mnemonicParsing="false" prefHeight="25.0" prefWidth="305.0" text="Potvrdi" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
