Dodana jos jedna provjera validnosti

--- a/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal06/upis.fxml
@@ -48,7 +48,7 @@
                 <Label text="Mjesto rođenja:" GridPane.rowIndex="3"/>
                 <TextField fx:id="jmbg" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                 <ComboBox fx:id="izborMjestaRodjenja" editable="true" prefHeight="25.0" prefWidth="277.0"
-                          promptText="Sarajevo" visibleRowCount="5" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                          visibleRowCount="5" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
                 <DatePicker fx:id="datum" onAction="#date" prefHeight="25.0" prefWidth="181.0" GridPane.columnIndex="1"
                             GridPane.rowIndex="2"/>
             </children>
